--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,14 @@ footer{
   .skip a{
     -webkit-transition: none;
     transition: none;
+    background: white;
+    left: 0;
+    padding: 6px;
+    position: absolute;
+    top: -40px;
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    z-index: 1;
   }
 }
 
@@ -162,7 +170,7 @@ footer{
 /* Style the back side */
 .flip-card-back {
   background-color: #cccc;
-  color: white;
+  color: black;
   transform: rotateY(180deg);
 }
 
